--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scroll-doctor",
-  "version": "1.0.1",
+  "version": "1.1.0-next.0",
   "description": "zero-dependency module to fix scrolling when showing modals on mobile devices",
   "main": "index.js",
   "type": "module",
@@ -18,7 +18,7 @@
     "build": "rollup -c"
   },
   "devDependencies": {
-    "rollup": "^2.58.0"
+    "rollup": "^3.2.3"
   },
   "files": [
     "index.js",
